--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0481.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0481.html
@@ -251,14 +251,14 @@
             <ins title="nlp 2.00">ἀνεπιφράκτου</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1670 610 1809 669" lang="grc">
+        <span id="w_46_0" class="ocr_word" title="bbox 1670 610 1809 669">
           <span class="alternatives">
-            <ins title="nlp 2.00">ξυλο-</ins>
+            <ins class="alt" title="nlp 2.00">ξυλοπύργου</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1832 628 1853 661">
+        <span id="w_46_1" class="ocr_word" title="bbox 1670 610 1809 669">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -266,11 +266,6 @@
         <span id="w_48" class="ocr_word" title="bbox 69 701 95 735">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_49" class="ocr_word" title="bbox 118 679 312 744" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πύργου</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 361 682 555 743" lang="grc">
@@ -572,7 +567,7 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1443 1163 1453 1174">
           <span class="alternatives">
-            <ins title="nlp 2.00"> · </ins>
+            <ins title="nlp 2.00">· </ins>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1503 1148 1690 1208" lang="grc">
@@ -582,16 +577,11 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1727 1167 1813 1198" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπ-</ins>
+            <ins title="nlp 2.00">ἐπενήνεκτο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 121 1220 1813 1291">
-        <span id="w_110" class="ocr_word" title="bbox 121 1220 353 1286" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ενήνεκτο</ins>
-          </span>
-        </span>
         <span id="w_111" class="ocr_word" title="bbox 390 1229 508 1287" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πῦρ,</ins>
@@ -629,16 +619,11 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1501 1223 1813 1290" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποτυφόμε-</ins>
+            <ins title="nlp 2.00">ὑποτυφόμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 121 1297 1815 1368">
-        <span id="w_119" class="ocr_word" title="bbox 121 1317 211 1348" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νον</ins>
-          </span>
-        </span>
         <span id="w_120" class="ocr_word" title="bbox 256 1298 381 1347" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κᾆθ’</ins>
@@ -765,16 +750,11 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1701 1477 1815 1523" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φρι-</ins>
+            <ins title="nlp 2.00">φρικτὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 1530 1816 1599">
-        <span id="w_145" class="ocr_word" title="bbox 120 1531 243 1583" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κτὸν</ins>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 280 1531 439 1583" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖνο</ins>
@@ -1297,16 +1277,11 @@
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1674 2310 1816 2372" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασι-</ins>
+            <ins title="nlp 2.00">βασιλεύουσαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 125 2383 1817 2451">
-        <span id="w_247" class="ocr_word" title="bbox 125 2384 370 2434" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λεύουσαν</ins>
-          </span>
-        </span>
         <span id="w_248" class="ocr_word" title="bbox 398 2383 775 2450" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπανέστρεφεν,</ins>
