--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0296.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0296.html
@@ -1,46 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0296.png">
-      <!--<div class="ocr_carea" title="bbox 672 2788 1336 2832">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 683 2797 1321 2828">
         <span id="w_0" class="ocr_word" title="bbox 683 2797 844 2822">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ι^ΙΡΒΙΑΕ</ins>
+            <ins title="nlp 2.00">LIRSIAE</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 877 2801 990 2826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΤΥΡΙ8</ins>
+            <ins title="nlp 2.00">TYPIS</ins>
           </span>
         </span>
-        <span id="w_2" class="ocr_word" title="bbox 1014 2803 1050 2826" xml:lang="grc">
+        <span id="w_2" class="ocr_word" title="bbox 1014 2803 1050 2826" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Β.</ins>
+            <ins title="nlp 2.00">Β.</ins>
           </span>
         </span>
-        <span id="w_3" class="ocr_word" title="bbox 1068 2804 1102 2827" xml:lang="grc">
+        <span id="w_3" class="ocr_word" title="bbox 1068 2804 1102 2827" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">.</ins>
-            <del title="nlp 0.90">ο.</del>
+            <ins title="nlp 2.00">G.</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1120 2805 1321 2828">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΤΕΓΒΝΕΚΙ</ins>
+            <ins title="nlp 2.00">TEUBNERI</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
