--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0430.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0430.html
@@ -203,9 +203,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1795 545 1921 590" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1795 545 1921 590">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πισ-</ins>
+            <ins class="alt" title="nlp 2.00">Πισσαίων</ins>
           </span>
         </span>
       </span>
@@ -213,11 +213,6 @@
         <span id="w_38" class="ocr_word" title="bbox 184 637 204 669">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_39" class="ocr_word" title="bbox 229 623 383 671" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σαίων</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 407 621 567 686" lang="grc">
@@ -653,9 +648,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 1725 1315 1916 1382" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 1725 1315 1916 1382">
           <span class="alternatives">
-            <ins title="nlp 2.00">βαρβά-</ins>
+            <ins class="alt" title="nlp 2.00">βαρβάρων</ins>
           </span>
         </span>
       </span>
@@ -663,11 +658,6 @@
         <span id="w_125" class="ocr_word" title="bbox 155 1416 196 1448">
           <span class="alternatives">
             <ins title="nlp 2.00">15</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 219 1415 322 1461" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρων</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 360 1403 502 1454" lang="grc">
@@ -781,7 +771,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 946 1547 1197 1613" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐρρόχθει</ins>
+            <ins title="nlp 2.00">ἐρρόχθει</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1221 1545 1314 1612" lang="grc">
@@ -1212,23 +1202,18 @@
             <ins title="nlp 2.00">Βαϊμούντου</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1770 2397 1913 2450" lang="grc">
+        <span id="w_234_0" class="ocr_word" title="bbox 1770 2397 1913 2450">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀδελ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀδελφιδοῦν</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1937 2428 1970 2458">
+        <span id="w_234_1" class="ocr_word" title="bbox 1770 2397 1913 2450">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 219 2471 1916 2542">
-        <span id="w_236" class="ocr_word" title="bbox 219 2478 406 2540" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φιδοῦν</ins>
-          </span>
-        </span>
         <span id="w_237" class="ocr_word" title="bbox 453 2478 802 2542" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐξεδειμάτουν</ins>
@@ -1498,7 +1483,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1430 1699 1571 1769" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ούδὲ</ins>
+            <ins title="nlp 2.00">ούδὲ</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1609 1722 1699 1768" lang="grc">
