--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0482.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0482.html
@@ -232,16 +232,11 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1761 635 1896 687" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρα-</ins>
+            <ins title="nlp 2.00">στρατηγίαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 203 700 1896 768">
-        <span id="w_43" class="ocr_word" title="bbox 203 704 378 768" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τηγίαν</ins>
-          </span>
-        </span>
         <span id="w_44" class="ocr_word" title="bbox 415 700 771 766" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐμηχανήσατο,</ins>
@@ -917,16 +912,11 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1676 1806 1898 1853" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περιποι-</ins>
+            <ins title="nlp 2.00">περιποιεῖσθαι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 1862 1898 1931">
-        <span id="w_177" class="ocr_word" title="bbox 198 1868 394 1927" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εῖσθαι,</ins>
-          </span>
-        </span>
         <span id="w_178" class="ocr_word" title="bbox 443 1862 566 1914" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -1409,9 +1399,14 @@
             <ins class="alt" title="nlp 1.00">σεβαστόν</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 906 2719 1025 2782" lang="grc">
+        <span id="w_271_0" class="ocr_word" title="bbox 906 2719 1025 2782">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῶν</ins>
+            <ins class="alt" title="nlp 2.00">(τῶν</ins>
+          </span>
+        </span>
+        <span id="w_271_1" class="ocr_word" title="bbox 906 2719 1025 2782">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1064 2718 1476 2783" lang="grc">
@@ -1422,11 +1417,6 @@
         <span id="w_273" class="ocr_word" title="bbox 1521 2721 1665 2777" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὗτος</ins>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 1702 2736 1893 2782" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπῆρχε</ins>
           </span>
         </span>
       </span>
