--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0431.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0431.html
@@ -436,16 +436,11 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1583 927 1802 991" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαφυρα-</ins>
+            <ins title="nlp 2.00">λαφυραγωγίας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 988 1866 1065">
-        <span id="w_83" class="ocr_word" title="bbox 104 992 286 1057" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γωγίας</ins>
-          </span>
-        </span>
         <span id="w_84" class="ocr_word" title="bbox 326 1010 470 1040" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἕνεκα</ins>
@@ -523,9 +518,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1592 1074 1803 1129" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 1592 1074 1803 1129">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεπνί-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπεπνίγοντο.</ins>
           </span>
         </span>
       </span>
@@ -533,11 +528,6 @@
         <span id="w_100" class="ocr_word" title="bbox 49 1158 81 1192">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_101" class="ocr_word" title="bbox 103 1164 264 1213" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γοντο.</ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 339 1147 389 1195" lang="grc">
@@ -723,9 +713,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1647 1481 1802 1529" lang="grc">
+        <span id="w_138_0" class="ocr_word" title="bbox 1647 1481 1802 1529">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παρακατασχὼν</ins>
           </span>
         </span>
       </span>
@@ -733,11 +723,6 @@
         <span id="w_139" class="ocr_word" title="bbox 26 1543 85 1578" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">267</ins>
-          </span>
-        </span>
-        <span id="w_140" class="ocr_word" title="bbox 103 1532 362 1598" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατασχὼν</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 400 1532 481 1583" lang="grc">
@@ -1121,23 +1106,18 @@
             <ins class="alt" title="nlp 1.00">πονηρὰν</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1667 2158 1795 2222" lang="grc">
+        <span id="w_219_0" class="ocr_word" title="bbox 1667 2158 1795 2222">
           <span class="alternatives">
-            <ins title="nlp 2.00">γνώ-</ins>
+            <ins class="alt" title="nlp 2.00">γνώμην</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1820 2178 1860 2210">
+        <span id="w_219_1" class="ocr_word" title="bbox 1667 2158 1795 2222">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 102 2228 1794 2298">
-        <span id="w_221" class="ocr_word" title="bbox 102 2251 202 2297" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μην</ins>
-          </span>
-        </span>
         <span id="w_222" class="ocr_word" title="bbox 241 2232 321 2282" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
