--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0432.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0432.html
@@ -455,9 +455,14 @@
             <ins class="alt" title="nlp 1.00">ἐκτομίαν</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1797 1009 1895 1055" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 1797 1009 1895 1055">
           <span class="alternatives">
-            <ins title="nlp 2.00">Εὐ-</ins>
+            <ins class="alt" title="nlp 2.00">Εὐστάθιον</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 1797 1009 1895 1055">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1922 1025 1962 1058">
@@ -465,18 +470,8 @@
             <ins title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1983 1025 1993 1058">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(??)</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 208 1082 1899 1151">
-        <span id="w_89" class="ocr_word" title="bbox 208 1083 419 1134" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">στάθιον</ins>
-          </span>
-        </span>
         <span id="w_90" class="ocr_word" title="bbox 464 1101 561 1136" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
@@ -848,9 +843,9 @@
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1715 1710 1896 1771" lang="grc">
+        <span id="w_162_0" class="ocr_word" title="bbox 1715 1710 1896 1771">
           <span class="alternatives">
-            <ins title="nlp 2.00">Λογγι-</ins>
+            <ins class="alt" title="nlp 2.00">Λογγιβαρδίας</ins>
           </span>
         </span>
       </span>
@@ -858,11 +853,6 @@
         <span id="w_163" class="ocr_word" title="bbox 143 1803 185 1836">
           <span class="alternatives">
             <ins title="nlp 2.00">20</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 207 1782 416 1849" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βαρδίας</ins>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 454 1783 524 1841" lang="grc">
