--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0295.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0295.html
@@ -1,150 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0295.png">
-      <!--<div class="ocr_carea" title="bbox 124 416 1840 1100">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 138 438 1822 554">
         <span id="w_0" class="ocr_word" title="bbox 138 440 742 552">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΑΚΧΑΕ</ins>
+            <ins title="nlp 2.00">ANNAE</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 846 438 1822 554">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΟΟΜίνΤΕΝΑΕ</ins>
+            <ins title="nlp 2.00">COMNENAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 668 737 1289 795">
         <span id="w_2" class="ocr_word" title="bbox 668 737 1289 795">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΡΟΕΡΗΥΚΟΟΕΝΙΤΑΕ</ins>
+            <ins title="nlp 2.00">PORPHYROGENITAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 594 982 1362 1096">
         <span id="w_3" class="ocr_word" title="bbox 594 982 1362 1096">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΕΕΧΙΑ8</ins>
+            <ins title="nlp 2.00">ALEXIAS</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 728 1280 1232 1332">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 740 1286 1214 1325">
         <span id="w_4" class="ocr_word" title="bbox 740 1288 818 1325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΕΧ</ins>
+            <ins title="nlp 2.00">ΕΧ</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 849 1286 1214 1325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΚΕ0ΕΝ8Ι0ΝΕ</ins>
+            <ins title="nlp 2.00">RECENSIONE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 296 1500 1656 1592">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 310 1515 1641 1587">
         <span id="w_6" class="ocr_word" title="bbox 310 1517 727 1587">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΑϋαυδΤΙ</ins>
-            <del title="nlp 0.90">ἀναυδέι</del>
-            <del title="nlp 0.89">ἀναυδέα</del>
-            <del title="nlp 0.88">ἀναυδὴς</del>
+            <ins title="nlp 2.00">AUGUSTI</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 783 1515 1641 1584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΕΕΙΕΓΕΕδΟΗΕΙϋΠ</ins>
+            <ins title="nlp 2.00">REIFFERSCHEIDII</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 756 1804 1200 1868">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 768 1814 1184 1865">
         <span id="w_8" class="ocr_word" title="bbox 768 1815 1095 1865">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">νΟΙ^ϋΜΕΝ</ins>
+            <ins title="nlp 2.00">VOLUMEN</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1133 1814 1184 1862">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 484 2672 1472 2944">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 836 2680 1123 2734">
         <span id="w_10" class="ocr_word" title="bbox 836 2680 1123 2734">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ι.ΙΡ8ΙΑΕ</ins>
+            <ins title="nlp 2.00">LIPSIAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 500 2795 1456 2841">
         <span id="w_11" class="ocr_word" title="bbox 500 2803 567 2841">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ΙΝ</ins>
+            <ins title="nlp 2.00">ΙΝ</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 607 2800 901 2839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΑΕϋΙΒϋβ</ins>
+            <ins title="nlp 2.00">AEDIBUS</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 942 2801 989 2836">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Β.</ins>
+            <ins title="nlp 2.00">Β.</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1026 2798 1077 2836">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">.</ins>
-            <del title="nlp 0.90">Ο.</del>
+            <ins title="nlp 2.00">G.</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1112 2795 1456 2835">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΤΕϋΒΝΕΚΙ</ins>
+            <ins title="nlp 2.00">TEUBNERI</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 803 2907 1170 2940">
         <span id="w_16" class="ocr_word" title="bbox 803 2907 1170 2940">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Μ^^^^I^xxxIV</ins>
+            <ins title="nlp 2.00">MDCCCLXXXIV</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
