--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0598.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0598.html
@@ -803,7 +803,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 453 1632 559 1692" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 604 1629 697 1698" lang="grc">
@@ -1451,7 +1451,7 @@
         </span>
         <span id="w_282" class="ocr_word" title="bbox 607 2776 652 2828" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(υ</ins>
+            <ins title="nlp 2.00">υ</ins>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 670 2774 717 2817">
