--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0483.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0483.html
@@ -214,14 +214,14 @@
             <ins title="nlp 2.00">Ῥογέρην</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 1541 547 1663 614" lang="grc">
+        <span id="w_40_0" class="ocr_word" title="bbox 1541 547 1663 614">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῶν</ins>
+            <ins class="alt" title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1701 566 1805 596" lang="grc">
+        <span id="w_40_1" class="ocr_word" title="bbox 1541 547 1663 614">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπιφανῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -357,16 +357,11 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1476 779 1805 843" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετακαλεσά-</ins>
+            <ins title="nlp 2.00">μετακαλεσάμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 853 1804 921">
-        <span id="w_68" class="ocr_word" title="bbox 106 873 251 919" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_69" class="ocr_word" title="bbox 290 857 479 920" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βουλὴν</ins>
@@ -629,16 +624,11 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1512 1240 1803 1307" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρατεύμα-</ins>
+            <ins title="nlp 2.00">στρατεύματος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 1317 1805 1385">
-        <span id="w_121" class="ocr_word" title="bbox 108 1336 187 1378" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τος</ins>
-          </span>
-        </span>
         <span id="w_122" class="ocr_word" title="bbox 246 1319 628 1385" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαρραγήσεται</ins>
@@ -839,16 +829,11 @@
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1620 1628 1803 1693" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δραμα-</ins>
+            <ins title="nlp 2.00">δραματουργεῖ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 1704 1805 1772">
-        <span id="w_162" class="ocr_word" title="bbox 108 1710 306 1772" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τουργεῖ</ins>
-          </span>
-        </span>
         <span id="w_163" class="ocr_word" title="bbox 337 1725 380 1754" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τι</ins>
@@ -1141,23 +1126,18 @@
             <ins title="nlp 2.00">Βαϊμούντου</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1682 2166 1798 2217" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 1682 2166 1798 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτ-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτάδελφος</ins>
           </span>
         </span>
-        <span id="w_221" class="ocr_word" title="bbox 1824 2191 1865 2224">
+        <span id="w_220_1" class="ocr_word" title="bbox 1682 2166 1798 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 2246 1804 2315">
-        <span id="w_222" class="ocr_word" title="bbox 109 2247 322 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀδελφὸς</ins>
-          </span>
-        </span>
         <span id="w_223" class="ocr_word" title="bbox 349 2250 437 2299" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καί</ins>
@@ -1465,11 +1445,6 @@
             <ins class="alt" title="nlp 1.00">ὑπαγορεῦον</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1650 2727 1800 2774" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γραμ-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 225 2886 421 2928">
         <span id="w_284" class="ocr_word" title="bbox 225 2888 250 2926">
@@ -1477,9 +1452,9 @@
             <ins title="nlp 2.00">3</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 280 2897 390 2928" lang="grc">
+        <span id="w_285_0" class="ocr_word" title="bbox 280 2897 390 2928">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὅσον?</ins>
+            <ins class="alt" title="nlp 2.00">γραμὅσον?</ins>
           </span>
         </span>
       </span>
