--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0433.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0433.html
@@ -648,7 +648,7 @@
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1554 1395 1815 1456" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοσαύτας</ins>
+            <ins title="nlp 2.00">τοσαύτας</ins>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1842 1413 1893 1445">
@@ -967,16 +967,11 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1666 1951 1819 2002" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσ-</ins>
+            <ins title="nlp 2.00">προσοκείλαντι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 124 2010 1821 2081">
-        <span id="w_185" class="ocr_word" title="bbox 124 2018 368 2067" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οκείλαντι</ins>
-          </span>
-        </span>
         <span id="w_186" class="ocr_word" title="bbox 421 2014 859 2081" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">περιποιήσασθαι.</ins>
@@ -1419,7 +1414,7 @@
       <span class="ocr_line" title="bbox 248 2879 652 2924">
         <span id="w_271" class="ocr_word" title="bbox 248 2886 298 2923" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">21 οὐν r: οὐ F</ins>
+            <ins title="nlp 2.00">οὐν r: οὐ F</ins>
           </span>
         </span>
       </span>
