--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0484.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0484.html
@@ -252,16 +252,11 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1596 621 1900 682" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταραχθήσε-</ins>
+            <ins title="nlp 2.00">ταραχθήσεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 690 1900 762">
-        <span id="w_47" class="ocr_word" title="bbox 201 715 280 746" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ται</ins>
-          </span>
-        </span>
         <span id="w_48" class="ocr_word" title="bbox 317 715 400 746" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -781,16 +776,11 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1710 1545 1904 1613" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὐχαρι-</ins>
+            <ins title="nlp 2.00">εὐχαριστίαν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 1622 1961 1692">
-        <span id="w_149" class="ocr_word" title="bbox 209 1627 368 1688" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στίαν,</ins>
-          </span>
-        </span>
         <span id="w_150" class="ocr_word" title="bbox 407 1624 528 1675" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -927,16 +917,11 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1789 1778 1906 1831" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποκρύπτειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 1855 1906 1924">
-        <span id="w_177" class="ocr_word" title="bbox 209 1858 448 1924" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κρύπτειν</ins>
-          </span>
-        </span>
         <span id="w_178" class="ocr_word" title="bbox 473 1877 572 1907" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -1078,14 +1063,14 @@
             <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1757 2090 1904 2139" lang="grc">
+        <span id="w_205_0" class="ocr_word" title="bbox 1757 2090 1904 2139">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτό-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτόμολον</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 1927 2111 1967 2146" lang="grc">
+        <span id="w_205_1" class="ocr_word" title="bbox 1757 2090 1904 2139">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1093,11 +1078,6 @@
         <span id="w_207" class="ocr_word" title="bbox 146 2187 189 2220">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">25</ins>
-          </span>
-        </span>
-        <span id="w_208" class="ocr_word" title="bbox 210 2172 360 2233" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μόλον</ins>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 386 2165 728 2232" lang="grc">
@@ -1226,16 +1206,11 @@
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1733 2321 1903 2390" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀριδή-</ins>
+            <ins title="nlp 2.00">ἀριδήλως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 2397 1903 2467">
-        <span id="w_235" class="ocr_word" title="bbox 212 2404 305 2459" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λως</ins>
-          </span>
-        </span>
         <span id="w_236" class="ocr_word" title="bbox 344 2419 444 2449" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -1323,9 +1298,9 @@
             <ins class="alt" title="nlp 1.00">καταριθμήσας,</ins>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 1673 2478 1905 2544" lang="grc">
+        <span id="w_253_0" class="ocr_word" title="bbox 1673 2478 1905 2544">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐζομοσά-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξομοσάμενοι</ins>
           </span>
         </span>
       </span>
@@ -1333,11 +1308,6 @@
         <span id="w_254" class="ocr_word" title="bbox 148 2574 190 2606">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 213 2572 349 2619" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μένοι</ins>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 397 2574 487 2618" lang="grc">
@@ -1382,16 +1352,11 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1826 2574 1904 2621" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γε-</ins>
+            <ins title="nlp 2.00">γεγόνασι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 213 2629 1903 2698">
-        <span id="w_265" class="ocr_word" title="bbox 213 2629 389 2697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γόνασι</ins>
-          </span>
-        </span>
         <span id="w_266" class="ocr_word" title="bbox 425 2631 509 2681" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1479,9 +1444,9 @@
             <ins class="alt" title="nlp 1.00">πάλαι</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1638 2724 1906 2776" lang="grc">
+        <span id="w_283_0" class="ocr_word" title="bbox 1638 2724 1906 2776">
           <span class="alternatives">
-            <ins title="nlp 2.00">προεσκεμ-</ins>
+            <ins class="alt" title="nlp 2.00">προεσκεμτοιούτων</ins>
           </span>
         </span>
       </span>
@@ -1489,11 +1454,6 @@
         <span id="w_284" class="ocr_word" title="bbox 327 2882 352 2921">
           <span class="alternatives">
             <ins title="nlp 2.00">3</ins>
-          </span>
-        </span>
-        <span id="w_285" class="ocr_word" title="bbox 385 2874 613 2921" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοιούτων</ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 646 2875 677 2920">
