--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0547.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0547.html
@@ -28,7 +28,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1729 197 1830 248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">δ1</ins>
+            <ins title="nlp 2.00">251</ins>
           </span>
         </span>
       </span>
@@ -50,7 +50,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 629 315 899 383" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκοῦ</ins>
+            <ins title="nlp 2.00">Ρωμαϊκοῦ</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 939 334 1296 385" lang="grc">
@@ -812,9 +812,14 @@
             <ins class="alt" title="nlp 1.00">παραχωροῦντος</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 1325 1639 1464 1708" lang="grc">
+        <span id="w_156_0" class="ocr_word" title="bbox 1325 1639 1464 1708">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδὲ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐδὲ</ins>
+          </span>
+        </span>
+        <span id="w_156_1" class="ocr_word" title="bbox 1325 1639 1464 1708">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1501 1660 1594 1706" lang="grc">
@@ -825,11 +830,6 @@
         <span id="w_158" class="ocr_word" title="bbox 1630 1661 1697 1690" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἂν</ins>
-          </span>
-        </span>
-        <span id="w_159" class="ocr_word" title="bbox 1731 1639 1828 1690" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
       </span>
