--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0548.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0548.html
@@ -354,23 +354,18 @@
             <ins class="alt" title="nlp 1.00">ἁμάξαις</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 1760 810 1890 857" lang="grc">
+        <span id="w_68_0" class="ocr_word" title="bbox 1760 810 1890 857">
           <span class="alternatives">
-            <ins title="nlp 2.00">παμ-</ins>
+            <ins class="alt" title="nlp 2.00">παμμυρίαις</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1916 811 1942 844">
+        <span id="w_68_1" class="ocr_word" title="bbox 1760 810 1890 857">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 865 1890 937">
-        <span id="w_70" class="ocr_word" title="bbox 186 871 388 935" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μυρίαις</ins>
-          </span>
-        </span>
         <span id="w_71" class="ocr_word" title="bbox 428 873 701 936" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπέβρισεν.</ins>
