--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0549.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0549.html
@@ -293,9 +293,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1663 703 1811 753" lang="grc">
+        <span id="w_54_0" class="ocr_word" title="bbox 1663 703 1811 753">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πολέ-</ins>
+            <ins class="alt" title="nlp 2.00">Πολέμωνος</ins>
           </span>
         </span>
       </span>
@@ -303,11 +303,6 @@
         <span id="w_55" class="ocr_word" title="bbox 78 792 104 825">
           <span class="alternatives">
             <ins title="nlp 2.00">c</ins>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 128 793 290 839" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μῶνος</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 319 775 500 840" lang="grc">
@@ -1196,14 +1191,14 @@
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
-        <span id="w_229" class="ocr_word" title="bbox 1635 2192 1821 2224" lang="grc">
+        <span id="w_229_0" class="ocr_word" title="bbox 1635 2192 1821 2224">
           <span class="alternatives">
-            <ins title="nlp 2.00">συναπ-</ins>
+            <ins class="alt" title="nlp 2.00">συναπἐρρευσε</ins>
           </span>
         </span>
-        <span id="w_230" class="ocr_word" title="bbox 1849 2196 1890 2228">
+        <span id="w_229_1" class="ocr_word" title="bbox 1635 2192 1821 2224">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1211,11 +1206,6 @@
         <span id="w_231" class="ocr_word" title="bbox 81 2271 112 2302">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_232" class="ocr_word" title="bbox 137 2271 334 2321" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">έρρευσε</ins>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 371 2257 578 2306" lang="grc">
