--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0485.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0485.html
@@ -389,16 +389,11 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1670 878 1810 910" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτο-</ins>
+            <ins title="nlp 2.00">αὐτοκράτορος.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 931 1808 1000">
-        <span id="w_74" class="ocr_word" title="bbox 101 931 364 1000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κράτορος.</ins>
-          </span>
-        </span>
         <span id="w_75" class="ocr_word" title="bbox 428 936 693 998" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐρωτηθεὶς</ins>
@@ -1130,16 +1125,11 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1724 2249 1809 2298" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύ-</ins>
+            <ins title="nlp 2.00">δύναμιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 2325 1812 2395">
-        <span id="w_216" class="ocr_word" title="bbox 118 2349 270 2395" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ναμιν</ins>
-          </span>
-        </span>
         <span id="w_217" class="ocr_word" title="bbox 317 2348 372 2378" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -1385,9 +1375,9 @@
             <ins class="alt" title="nlp 1.00">ἄνδρα</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1732 2731 1809 2761" lang="grc">
+        <span id="w_265_0" class="ocr_word" title="bbox 1732 2731 1809 2761">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐκγε</ins>
           </span>
         </span>
       </span>
@@ -1395,11 +1385,6 @@
         <span id="w_266" class="ocr_word" title="bbox 234 2888 286 2927">
           <span class="alternatives">
             <ins title="nlp 2.00">28</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 319 2899 371 2939">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γε</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 402 2897 443 2924">
