--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0436.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0436.html
@@ -1078,7 +1078,7 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1335 2029 1443 2090" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1480 2029 1574 2097" lang="grc">
